bk_ida/gobmkida/g0/segment_region
/data/output_dir/patch/gobmk/ida/gcc/O0/gobmk-gcc-O0/segment_region/src/engine/influence.c:1745:30: error: use of undeclared identifier 'marked_3'
memset( marked_3, 0, sizeof( marked_3)); 
                             ^
/data/output_dir/patch/gobmk/ida/gcc/O0/gobmk-gcc-O0/segment_region/src/engine/influence.c:1745:9: error: use of undeclared identifier 'marked_3'
memset( marked_3, 0, sizeof( marked_3)); 
        ^
/data/output_dir/patch/gobmk/ida/gcc/O0/gobmk-gcc-O0/segment_region/src/engine/influence.c:1748:25: error: use of undeclared identifier 'marked_3'
if ( board[ii] != 3 && !marked_3[ii] && region_owner( q, ii) ) 
                        ^
/data/output_dir/patch/gobmk/ida/gcc/O0/gobmk-gcc-O0/segment_region/src/engine/influence.c:1756:1: error: use of undeclared identifier 'marked_3'
marked_3[ii] = 1; 
^
/data/output_dir/patch/gobmk/ida/gcc/O0/gobmk-gcc-O0/segment_region/src/engine/influence.c:1777:29: error: use of undeclared identifier 'marked_3'
if ( board[tt + d] != 3 && !marked_3[tt + d] && color == region_owner( q, tt + d) ) 
                            ^
/data/output_dir/patch/gobmk/ida/gcc/O0/gobmk-gcc-O0/segment_region/src/engine/influence.c:1780:1: error: use of undeclared identifier 'marked_3'
marked_3[tt + d] = 1; 
^
6 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/gcc/O0/gobmk-gcc-O0/segment_region/src/obj/1/influence.o] Error 1
